use-cases/sp-api-dev-assistant-mcp-server/tests/setup.ts
// Jest setup file
// Add any global test setup here

// Mock console methods to reduce noise in test output
global.console = {
  ...console,
  // Uncomment to suppress console output during tests
  // log: jest.fn(),
  // debug: jest.fn(),
  // info: jest.fn(),
  // warn: jest.fn(),
  // error: jest.fn(),
};
